Fix complex tabs overlap with some fields

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,7 +450,7 @@ body.comment-php #poststuff .postbox-container .inside { margin: 0; padding: 0; 
 .layout-tabbed-horizontal > .group-tabs-nav-holder > .group-tabs-nav .active a { padding: 10px 6px 10px; margin-top: 0; }
 .layout-tabbed-horizontal > .group-tabs-nav-holder > .group-tabs-nav .ui-placeholder-highlight { margin: 2px -1px 0 1px; }
 
-.layout-tabbed-horizontal > .group-tabs-nav-holder { box-sizing: border-box; position: relative; z-index: 30; float: left; max-width: 100%; padding-right: 39px; line-height: 18px; }
+.layout-tabbed-horizontal > .group-tabs-nav-holder { box-sizing: border-box; position: relative; z-index: 1; float: left; max-width: 100%; padding-right: 39px; line-height: 18px; }
 .layout-tabbed-horizontal > .group-tabs-nav-holder.active { z-index: 200; }
 
 .layout-tabbed-horizontal > .group-tabs-nav-holder > .group-tabs-nav { width: 100%; margin-bottom: -1px; font-size: 0; display: -webkit-flex; display: flex; overflow: hidden; -webkit-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-justify-content: flex-start; justify-content: flex-start; -webkit-align-items: stretch; align-items: stretch; -webkit-align-content: stretch; align-content: stretch; }
